alignment issues

--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -1,6 +1,7 @@
 .faq-content {
   display: flex;
   justify-content: center;
+  margin-top: 70px;
 }
 
 .faq-content h1 {
