--- a/src/styles/policies.css
+++ b/src/styles/policies.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: 70px;
 }
 
 .policies-main-content section{
@@ -19,6 +20,7 @@
   box-shadow: 4px 4px #fefefe;
   width: 50vw;
   margin: 20px;
+  color:#fff;
 }
 .policies-title {
   text-decoration: none;
